# travelop-mockup

./: .gitignore  README.md  package-lock.json
backend/: agent.py  main.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/agent/: page.tsx
frontend/src/app/agent/styles/: Agent.module.css
frontend/src/app/api/: route.ts
frontend/src/app/styles/: page.module.css
frontend/src/components/layout/: Background.tsx  DisclaimerPopUp.tsx  Header.tsx  Navbar.tsx  PopUp.tsx
frontend/src/components/layout/styles/: DisclaimerPopUp.module.css  Header.module.css  Navbar.module.css  PopUp.module.css
frontend/src/components/livekit/: ChatDisplay.tsx  ChatVisualizer.tsx  Controls.tsx  SimpleVoiceAssistant.tsx
frontend/src/components/livekit/styles/: ChatVisualizer.module.css  Controls.module.css  LivekitOverrides.css  SimpleVoiceAssistant.module.css
frontend/src/components/ui/: BlurText.tsx  Button.tsx  Iridescence.tsx  LiquidChrome.tsx  LogoText.tsx
frontend/src/components/ui/styles/: Button.module.css  LogoText.module.css
frontend/src/lib/: fonts.ts
